<resources>
    <string name="app_name">JustSauce</string>
    <string name="login_mainLabel">Entra in JustSauce</string>
    <string name="email_hint">Inserisci email</string>
    <string name="password_hint">Inserisci password</string>
    <string name="confirmPassword_hint">Conferma password</string>
    <string name="loginRegister_labelClickable">Nuovo su JustSauce? Crea un account</string>
    <string name="login">LOGIN</string>
    <string name="checkout">Checkout</string>
    <string name="register_mainLabel">Join JustSauce</string>
    <string name="nickname_hint">Inserisci username</string>
    <string name="register">REGISTRATI</string>
    <string name="registerLogin_labelClickable">Hai già un account? Effettua il login</string>
    <string name="nTelefono_hint">Inserisci numero di telefono</string>
    <string name="cambiaLayout">Layout</string>
    <string name="menu_button"> VEDI MENU</string>
    <string name="order_label">RIEPILOGO ORDINE</string>
    <string name="pay">PAY</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="profile_actionSettings">Profile Settings</string>
</resources>
